# simple-type-tree

./: .gitmodules  simple-type-tree.cabal
src/Data/TypeTree/: Containment.hs  Induction.hs  List.hs  Map.hs  Operations.hs  TH.hs  Tree.hs
src/Data/TypeTree/Containment/: List.hs  Tree.hs
tests/: MainTestSuite.hs
tests/Data/TypeTree/: THTest.hs
tests/Data/TypeTree/THTest/: Internal.hs
