name:           simple-type-tree
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         eric

library
  hs-source-dirs:  src
  build-depends:
                   base >= 4,
                   template-haskell >=2.9 && <2.10,
                   Peano >=0.0.1 && <1.0,
                   peano-extras >=0.1 && <0.2,
                   typereplike >= 0.1 && <0.2,
                   text >= 1.1 && <1.2,
                   containers >= 0.5 && <0.6,
                   constraints >= 0.4 && <0.5
  ghc-options:     -Wall
  exposed-modules:
                   Data.TypeTree.List,
                   Data.TypeTree.Operations,
                   Data.TypeTree.TH,
                   Data.TypeTree.Tree,
                   Data.TypeTree.Containment,
                   Data.TypeTree.Induction
test-suite simple-type-tree-tests
  type:exitcode-stdio-1.0
  hs-source-dirs: tests, src
  main-is: MainTestSuite.hs
  build-depends:
                   base >= 4,
                   template-haskell >=2.9 && <2.10,
                   Peano >=0.0.1 && <1.0,
                   peano-extras >=0.1 && <0.2,
                   typereplike >= 0.1 && <0.2,
                   text >= 1.1 && <1.2,
                   containers >= 0.5 && <0.6,
                   constraints >= 0.4 && <0.5,
                   HUnit,
                   QuickCheck,
                   test-framework,
                   test-framework-hunit,
                   test-framework-quickcheck2
